--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 IDMSample.xcodeproj/project.xcworkspace/xcuserdata/congnc.xcuserdatad/UserInterfaceState.xcuserstate
 IDMSample.xcworkspace/xcuserdata/congnc.xcuserdatad/UserInterfaceState.xcuserstate
+IDMSample.xcworkspace/xcuserdata/congncif.xcuserdatad
